<resources>
    <string name="app_name">QuizApp</string>
    <string name="login_text">Oyuncu Adı:</string>
    <string name="login_hint">Lütfen Adınızı Giriniz</string>
    <string name="login_button_text">İleri</string>
    <string name="category_text">Hoşgeldin;</string>
    <string name="category_card_one">ANDROID</string>
    <string name="category_card_two">JAVA</string>
    <string name="category_card_exit">ÇIKIŞ</string>
    <string name="game_text_bar">Android</string>
    <string name="game_text_default_number">2/10</string>
    <string name="game_text_default_score">200</string>
    <string name="game_text_question">SORU : </string>
    <string name="game_text_score">PUAN : </string>
    <string name="question_one">Hangisi bir mobil işletim sistemi değildir? </string>
    <string name="answer_one">birinci cevap</string>
    <string name="answer_two">ikinci cevap</string>
    <string name="answer_three">üçüncü cevap</string>
    <string name="answer_four">dördüncü cevap</string>
    <string name="toast_not_empty">Lütfen Boş Bırakmayınız..</string>
    <string name="alert_title_exit">Çıkış</string>
    <string name="alert_title_continue">Cevap Doğru</string>
    <string name="alert_message_exit">Uygulamadan Çıkılsın Mı ?</string>
    <string name="alert_negative_button">Hayır</string>
    <string name="alert_positive_button">Evet</string>
    <string name="alert_devam_button">Devam</string>
    <string name="exit_button">Çıkış</string>

    <string name="game_over_text">Oyun Bitti</string>
    <string name="game_end_text">Tebrikler</string>
    <string name="back_to_homepage">Anasayfaya Dön</string>


</resources>