<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GameFinishActivity">

    <ImageView
        android:id="@+id/imageViewEmoji"
        android:layout_marginTop="@dimen/activity_small_size"
        android:layout_gravity="center"
        android:src="@drawable/sad_emoji"
        android:layout_width="@dimen/activity_small_size"
        android:layout_height="@dimen/activity_small_size">

    </ImageView>

    <TextView
        android:id="@+id/txtFinishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_size"
        android:layout_marginTop="@dimen/margin_size"
        android:fontFamily="sans-serif-thin"
        android:textSize="@dimen/text_medium_size"
        android:text="@string/game_over_text"
        android:textColor="@color/black"
        android:textStyle="bold">

    </TextView>

    <LinearLayout

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="@dimen/activity_xxsmall_size"
            android:text="@string/game_text_question"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/txtQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/game_text_default_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="@dimen/activity_xxsmall_size"
            android:text="@string/game_text_score"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/game_text_default_score"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>


    </LinearLayout>

    <Button
        android:id="@+id/btnBackToHomePage"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_gravity="center"
        android:text="@string/back_to_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>
    <Button
        android:id="@+id/btnExit"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_gravity="center"
        android:text="@string/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>




</LinearLayout>