<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DB6AC"
    android:orientation="vertical"
    tools:context=".activities.GameActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGameBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_xxsmall_size"
        app:cardBackgroundColor="@color/yellow">

        <TextView
            android:id="@+id/tv_game_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge_size"
            android:textStyle="bold">

        </TextView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="@dimen/activity_xxsmall_size"
            android:text="@string/game_text_question"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tv_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/game_text_default_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="@dimen/activity_xxsmall_size"
            android:text="@string/game_text_score"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tv_question_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/game_text_default_score"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/game_text_height"
        android:layout_marginTop="@dimen/activity_xsmall_size"
        android:layout_marginBottom="@dimen/activity_xsmall_size"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_xsmall_size"
        android:paddingRight="@dimen/activity_xsmall_size">


        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/question_one"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_xsmall_size"
        android:paddingRight="@dimen/activity_xsmall_size">


        <Button
            android:id="@+id/btn_option_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_xsmall_size"
            android:background="@color/light_pink_color"
            android:paddingTop="@dimen/padding_size"
            android:text="@string/answer_one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size">

        </Button>

        <Button
            android:id="@+id/btn_option_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_xsmall_size"
            android:layout_marginTop="@dimen/margin_size"
            android:background="@color/light_pink_color"
            android:paddingTop="@dimen/padding_size"
            android:text="@string/answer_two"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_size"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_xsmall_size"
        android:paddingRight="@dimen/activity_xsmall_size">


        <Button
            android:id="@+id/btn_option_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_xsmall_size"
            android:background="@color/light_pink_color"
            android:paddingTop="@dimen/padding_size"
            android:text="@string/answer_three"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size">

        </Button>

        <Button
            android:id="@+id/btn_option_four"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_xsmall_size"
            android:layout_marginTop="@dimen/margin_size"
            android:background="@color/light_pink_color"
            android:paddingTop="@dimen/padding_size"
            android:text="@string/answer_four"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size">

        </Button>


    </LinearLayout>


</LinearLayout>