<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/category_bg"
    android:orientation="vertical"
    tools:context=".activities.CategoryActivity">


    <ImageView
        android:layout_width="@dimen/activity_small_size"
        android:layout_height="@dimen/activity_small_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_xsmall_size"
        android:background="@drawable/logo_circle">

    </ImageView>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_xsmall_size"
        android:layout_marginTop="@dimen/activity_xsmall_size"
        android:fontFamily="sans-serif-thin"
        android:text="@string/category_text"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_xsmall_size"
        android:fontFamily="sans-serif-thin"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_xsmall_size"
        android:orientation="vertical"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAndroid"
            android:clickable="true"
            android:layout_width="@dimen/activity_large_size"
            android:layout_height="@dimen/activity_xsmall_size"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/activity_xxsmall_size"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/category_card_one"
                android:textColor="#E6E0E0"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardJava"
            android:clickable="true"
            android:layout_width="@dimen/activity_large_size"
            android:layout_height="@dimen/activity_xsmall_size"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:layout_marginTop="@dimen/margin_size"
            app:cardBackgroundColor="@color/blue"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/activity_xxsmall_size"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/category_card_two"
                android:textColor="#E6E0E0"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCikis"
            android:clickable="true"
            android:layout_width="@dimen/activity_large_size"
            android:layout_height="@dimen/activity_xsmall_size"
            android:layout_marginStart="@dimen/activity_xsmall_size"
            android:layout_marginTop="@dimen/margin_size"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/activity_xxsmall_size"
            android:focusable="true">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/category_card_exit"
                android:textColor="#E6E0E0"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>